Change a written style and add a new contents

--- a/essay/cc0code.html
+++ b/essay/cc0code.html
@@ -45,7 +45,7 @@ This work is published from:
 
 <p>　このコードの気に入らない点は、HTMLを使いたいのにXHTMLであること・画像のパスにHTTPSを使っていないこと・そして画像と文章に空白を入れる目的でbrタグを使っていることです。これらを修正してすっきりしたコードにします。</p>
 
-<p>　結論、次のようにコードになりました。</p>
+<p>　結論、次のようなコードになりました。</p>
 
 <pre><code>&lt;div style="text-align:center;padding-top:2em;padding-bottom:2em;"&gt;
   &lt;a rel="license" href="https://creativecommons.org/publicdomain/zero/1.0/"&gt;&lt;img src="https://i.creativecommons.org/p/zero/1.0/88x31.png" alt="CC0" /&gt;&lt;/a&gt;
