--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
 <li><a href="./netbsd/xen.html">Xenで準仮想化環境を構築する</a></li>
 <li><a href="./netbsd/pkgsrc-wip.html">pkgsrc-wip上での作業</a></li>
 <li><a href="./netbsd/update_pkgsrc.html">安全なpkgsrc(7)パッケージの更新</a></li>
+<li><a href="./how_to_be_developer.html">NetBSD開発者になる方法</a></li>
 </ul></li>
 
 <li id="coding">Coding
