--- a/netbsd/pkgsrc-wip.html
+++ b/netbsd/pkgsrc-wip.html
@@ -14,7 +14,6 @@ pre{padding-top:1em; padding-left:2em; padding-right:2em; padding-bottom:1em; li
 </head>
 <body><div class="inner">
 <h1>pkgsrc-wip上での作業</h1>
-<p>Last Update <time>2018-09-22</time></p>
 <hr>
 <ol>
   <li><a href="#official">公式ドキュメント</a></li>
@@ -24,10 +23,10 @@ pre{padding-top:1em; padding-left:2em; padding-right:2em; padding-bottom:1em; li
 <h2 id="official">公式ドキュメント</h2>
 <p>公式サイトは<a href="https://www.pkgsrc.org/wip/">The pkgsrc-wip project</a></p>
 
-<p><a href="https://www.pkgsrc.org/wip/users/">The pkgsrc-wip project -- committer access</a>にはpkgsrc-wip開発者の登録からパッケージの作成まで様々な情報が書かれている。これを読んでおけばwipの作業は問題ない。</p>
+<p><a href="https://www.pkgsrc.org/wip/users/">The pkgsrc-wip project -- committer access</a>にはpkgsrc-wip開発者の登録からパッケージの作成まで様々な情報が書かれています。これを読んでおけばwipの作業は問題ないでしょう。</p>
 
 <h2 id="practice">パッケージを更新する実例</h2>
-<p>pkgsrc-wipにてwip/basepkgパッケージのバージョンを1.2から1.3に挙げたときの作業手順をここに残す。</p>
+<p>pkgsrc-wipにてwip/basepkgパッケージのバージョンを1.2から1.3に挙げたときの作業手順をここに残します。</p>
 
 <h3 id="makefile">Makefileを更新する</h3>
 <pre><code># diff -u Makefile.org Makefile
@@ -43,10 +42,10 @@ pre{padding-top:1em; padding-left:2em; padding-right:2em; padding-bottom:1em; li
  MASTER_SITES=  ${MASTER_SITE_GITHUB:=user340/}</code></pre>
 
 <h3 id="distinfo">distinfoを更新する</h3>
-<p>make distinfoを実行する。</p>
+<p>make distinfoを実行します。</p>
 
 <h3 id="plist">PLISTを更新する</h3>
-<p>make packageでパッケージを作成したあと、make print-PLISTの出力をPLISTに書き込む。</p>
+<p>make packageでパッケージを作成したあと、make print-PLISTの出力をPLISTに書き込みます。</p>
 
 <h3 id="test">テスト</h3>
 <ul>
@@ -55,23 +54,21 @@ pre{padding-top:1em; padding-left:2em; padding-right:2em; padding-bottom:1em; li
   <li>make deinstall</li>
 </ul>
 
-<p>これらがすべて正常に動作するか確認する。</p>
-
-<p>Makefileのチェックなどにpkgtools/pkglintを使う。</p>
+<p>これらがすべて正常に動作するか確認します。Makefileのチェックなどにはpkgtools/pkglintを使います。</p>
 
 <h3 id="commit">コミット</h3>
-<p>変更を加えたファイルを対象にgit addする。</p>
+<p>変更を加えたファイルを対象に<code>git add</code>します。</p>
 
 <pre><code># git add Makefile distinfo PLIST</code></pre>
 
-<p>コミットメッセージは以下のように書く。</p>
+<p>コミットメッセージは以下のように書きます。</p>
 
 <pre><code>basepkg: Update wip/basepkg to 1.3
 
 Changes:
  * New two meta data, +SIZE_PKG and +SIZE_ALL.</code></pre>
 
-<p>pkgsrc-wipリポジトリはmasterブランチ一本運用である。pushする前に<code>pull -r</code>してローカルにcloneされているpkgsrc-wipリポジトリを更新する。</p>
+<p>pkgsrc-wipリポジトリはmasterブランチ一本運用です。pushする前に<code>pull -r</code>してローカルにcloneされているpkgsrc-wipリポジトリを更新します。</p>
 
 <h3 id="conclusion">作業のまとめ</h3>
 <pre><code># cd /usr/pkgsrc/wip/basepkg
