--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 </ul>
 </li>
 <li><a href="#papers">Papers and Presentations</a></li>
+<li><a href="#log">Meet up log</a></li>
 <li><a href="#links">Links</a></li>
 <li><a href="#fingerprint">Fingerprint</a>
 <li><a href="#about">About</a></li>
@@ -69,6 +70,11 @@
 <li>Yuuki Enomoto &amp; Ken'ichi Fukamachi, <a href="./presentation/asiabsdcon2017/main.pdf"> Maintain the NetBSD Base System Using pkg_* Tools</a>, AsiaBSDCon 2017</li>
 <li>榎本優樹 &amp; 深町賢一 &amp; 青木広宙, <a href="./presentation/imec2016/main.pdf"> Intel RealSense カメラを用いた疑似力触覚体験システム</a>,第21回 知能メカトロニクスワークショップ, 2016</li>
 <li>榎本優樹 &amp; 深町賢一, <a href="./presentation/fit2016/main.pdf"> Emmbedded NetBSD を生成するプログラムの展望</a>,情報処理学会, FIT2016 第15回情報科学技術フォーラム, 2016</li>
+</ul>
+
+<h2 id="log">Meet up log</h2>
+<ul>
+<li><a href="./community/FreeBSD_Workshop">FreeBSDワークショップ</a></li>
 </ul>
 
 <h2 id="links">Links</h2>
