--- a/netbsd/how_to_be_developer.html
+++ b/netbsd/how_to_be_developer.html
@@ -13,18 +13,18 @@ pre{padding-top:1em; padding-left:2em; padding-right:2em; padding-bottom:1em; li
 <title>e-yuuki.org</title>
 </head>
 <body><div class="inner">
-<h1>NetBSD開発者になる方法</h1>
+<h1>NetBSD/pkgsrc開発者になる方法</h1>
 <hr>
 <h2 id="intro">はじめに</h2>
 <p>2019年3月1日にNetBSD開発者になり、<a href="https://wiki.netbsd.org/projects/project/syspkgs/">syspkg</a>とInstallationの作業をすることになりました。大学院での研究成果について「いっそ開発者になってアップストリームをいじればいい」と言われてから半年以上が経ち、2019年1月からようやく腰を上げて開発者申請をしたという経緯がありました。</p>
 
-<p>NetBSD自体がマイナーなOSであり、その開発者になるにはどうしたらいいかという文書は日本語で書かれている印象がないのでここに残しておきます。</p>
+<p>NetBSD自体がマイナーなOSであり、その開発者になるにはどうしたらいいかという文書は日本語で書かれている印象がないのでここに残しておきます。また<code>pkgsrc(7)</code>のCVS repositoryに直接commitするにも開発者申請が必要ですが、ここではその話はしません。</p>
 
 <h2>1. NetBSDを使う</h2>
-<p>まずはNetBSDを使わないと話が始まりません。用途・動機はなんでもいいと思います。</p>
+<p>まずはNetBSDを使わないと話が始まりません。用途・動機はなんでもいいと思います。<code>pkgsrc(7)</code>であればGNU/Linux distributions・FreeBSD・OpenBSD上で利用できることから、OSをインストールして使うより敷居が高くはないと思われます。</p>
 
 <h2>2. できそうなことを見つける</h2>
-<p>NetBSDを使っていく中で、少なからず不便に思った点や困った点が見つかると思います。それをメーリングリストやユーザ会に報告したり、自分でそれを解決する、あるいはしたいと思ったときにはじめてThe NetBSD Projectへ参加する動機が見つかります。</p>
+<p>NetBSD/<code>pkgsrc(7)</code>を使っていく中で、少なからず不便に思った点や困った点が見つかると思います。それをメーリングリストやユーザ会に報告したり、自分でそれを解決する、あるいはしたいと思ったときにはじめてThe NetBSD Projectへ参加する動機が見つかります。</p>
 
 <h2>3. できそうなことをある程度こなす</h2>
 <p>やりたいこと・やってみたいことが見つかったら、それを実際にやってみます。そしてその成果をなんらかの形で共有します。共有する方法はなんでもいいです。SNSでシェアしてもいいですし、FLOSS系のイベントやカンファレンスで少し時間をもらって発表してもいいです。とにかく、なんらかのやりたいことがあって、それを現実に実行していると他の開発者に伝えることが重要です。</p>
