Update: add 'in my case'

--- a/netbsd/how_to_be_developer.html
+++ b/netbsd/how_to_be_developer.html
@@ -23,11 +23,26 @@ pre{padding-top:1em; padding-left:2em; padding-right:2em; padding-bottom:1em; li
 <h2>1. NetBSDを使う</h2>
 <p>まずはNetBSDを使わないと話が始まりません。用途・動機はなんでもいいと思います。<code>pkgsrc(7)</code>であればGNU/Linux distributions・FreeBSD・OpenBSD上で利用できることから、OSをインストールして使うより敷居が高くはないと思われます。</p>
 
+<h3>1.1. 僕の場合</h3>
+<p>大学3年生冬の研究室配属ののち、研修で触ったのがNetBSDでした。卒業論文のために書いたプログラムはNetBSDに完全に依存していて、修士論文もまた同様でした。これは自発的に（無論、研究テーマを決めたのは自分自身）NetBSDを使い始めたというわけではなく、なりゆきでそうなったと言うのが正しいと思います。</p>
+
 <h2>2. できそうなことを見つける</h2>
 <p>NetBSD/<code>pkgsrc(7)</code>を使っていく中で、少なからず不便に思った点や困った点が見つかると思います。それをメーリングリストやユーザ会に報告したり、自分でそれを解決する、あるいはしたいと思ったときにはじめてThe NetBSD Projectへ参加する動機が見つかります。</p>
 
+<h3>2.1. 僕の場合</h3>
+<p>修士論文で書いたプログラムがNetBSDのソースツリーの一部に依存しており、事実そこだけforkしている形になっていました。しかしforkingの弊害、つまりアップストリームの変更に追従していくのが大変という問題に気づきました。</p>
+
+<h3>2.2. Project proposals for NetBSD</h3>
+<p>NetBSD Wikiの<a href="https://wiki.netbsd.org/projects/">Project proposals for NetBSD</a>には未解決・進行中のプロジェクトの一覧が載っています。もしあなたが問題解決好きなエンジニアであればこの中から自身のスキルと嗜好に合ったものを探してみるといいでしょう。</p>
+
+<h3>2.3. Google Summer of Code</h3>
+<p>NetBSDのプロジェクトの中にはGoogle Summer of Codeに応募して取り組められるものもあります。GSoCに参加したくてかつNetBSDに少しでも興味があるのであれば、良いとっかかりになるのではないでしょうか。<a href="https://wiki.netbsd.org/projects/gsoc/">https://wiki.netbsd.org/projects/gsoc/</a></p>
+
 <h2>3. できそうなことをある程度こなす</h2>
 <p>やりたいこと・やってみたいことが見つかったら、それを実際にやってみます。そしてその成果をなんらかの形で共有します。共有する方法はなんでもいいです。SNSでシェアしてもいいですし、FLOSS系のイベントやカンファレンスで少し時間をもらって発表してもいいです。とにかく、なんらかのやりたいことがあって、それを現実に実行していると他の開発者に伝えることが重要です。</p>
+
+<h3>3.1. 僕の場合</h3>
+<p>成果をAsiaBSDConや日本NetBSDユーザーズグループのBoFで発表しました。成果物があまりにも特定分野に偏りすぎているがために特定のユーザコミュニティ内で成果発表をしないとあまり意味がない場合もあります。GNU/LinuxやLinuxカーネルならまだしも、*BSDはまさにこの典型です。</p>
 
 <h2>4. スポンサーを探す</h2>
 <p>最難関の手順です。まずこの時点で誰がNetBSDの開発者なのかを把握していないといけません。そのためにはSNSだけでなく対面して会える現実世界でのカンファレンスやイベントに出向く必要もあるでしょう。スポンサーになってくれるかどうか開発者に尋ねて、OKをもらってください。</p>
