--- a/introduction/index.html
+++ b/introduction/index.html
@@ -15,9 +15,9 @@ pre{padding-top:1em; padding-left:2em; padding-right:2em; padding-bottom:1em; li
 <body><div class="inner">
 <h1>Unix入門</h1>
 <hr>
-<p>本書の目的は（1）資料が分散されがちだが、Unix系OS上で一般的に使用されるソフトウェアの使用方法を一箇所にまとめ更新していくことと（2）大学の講義や研究室および企業の研修資料として使うに耐えられる品質の自由な入門文書を残すことにある。</p>
+<p>目的は（1）資料が分散されがちだがUnix系OS上で一般的に使用されるソフトウェアの使用方法を一箇所にまとめ更新していくこと、（2）大学の講義や研究室および企業の研修資料として使うに耐えうる品質の自由な入門文書を残すことにあります。</p>
 
-<p>本書は<a href="https://github.com/user340/www/tree/master/introduction">https://github.com/user340/www</a>リポジトリの一部で管理されている。どのファイルがいつどのように変更されたかを正確に見るにはGitのlogを参照してほしい。HTMLはWorld Wide Web Consortium（W3C）による<a href="https://www.w3.org/TR/2017/REC-html52-20171214/">HTML 5.2</a>に従って書かれ、そのmarkupは<a href="https://validator.w3.org/">The W3C Markup Validation Service</a>にて確認している。</p>
+<p>本書は<a href="https://github.com/user340/www/tree/master/introduction">https://github.com/user340/www</a>リポジトリの一部で管理されています。どのファイルがいつどのように変更されたかを正確に見るにはGitのlogを参照してください。HTMLはWorld Wide Web Consortium（W3C）による<a href="https://www.w3.org/TR/2017/REC-html52-20171214/">HTML 5.2</a>に従って書かれ、そのmarkupは<a href="https://validator.w3.org/">The W3C Markup Validation Service</a>にて確認しています。</p>
 
 
 <h2>目次</h2>
@@ -38,7 +38,7 @@ pre{padding-top:1em; padding-left:2em; padding-right:2em; padding-bottom:1em; li
         <ol>
         <li><a href="./i3.html">ウィンドウマネージャ&mdash;&mdash;i3</a></li>
         <li><a href="./urxvt.html">仮想端末&mdash;&mdash;rxvt-unicode</a></li>
-        <li>端末多重化&mdash;&mdash;tmux</li>
+        <li><a href="./tmux.html">端末多重化&mdash;&mdash;tmux</a></li>
         <li>インプットメソッド&mdash;&mdash;ibus-mozc</li>
         <li>日本語フォント&mdash;&mdash;Ricty</li>
         </ol>
