--- a/introduction/intro.html
+++ b/introduction/intro.html
@@ -21,11 +21,11 @@ pre{padding-top:1em; padding-left:2em; padding-right:2em; padding-bottom:1em; li
 
 <pre><code>$ ls</code></pre>
 
-<p>のように黒線で囲い、コマンドライン上で操作していることを示すためにコマンドの先頭に"$ "か"# "を付ける。前者は一般ユーザ、後者は特権（root）ユーザで実行することを表す。</p>
+<p>のように黒線で囲い、コマンドライン上で操作していることを示すためにコマンドの先頭に"$ "か"# "を付けます。前者は一般ユーザ、後者は特権（root）ユーザで実行することを表します。</p>
 
-<p>文章中のコマンド名は<code>ls(1)</code>のような<code>コマンド名(セクション番号)</code>という形式で書く。この形式の利点は"make"といった一般的に使われる英単語との混同を避けられ（"make", <code>make</code>）、マニュアルページのセクション番号によって正しいリファレンスを提供できることにある（<code>make</code>, <code>make(1)</code>）。後者は特に同じ名前のライブラリ関数が存在する場合にそれと区別する目的もある（<code>printf(1)</code>, <code>printf(3)</code>）。</p>
+<p>文章中のコマンド名は<code>ls(1)</code>のような<code>コマンド名(セクション番号)</code>という形式で書きます。この形式の利点は"make"といった一般的に使われる英単語との混同を避けられ（"make", <code>make</code>）、マニュアルページのセクション番号によって正しいリファレンスを提供できることにあります（<code>make</code>, <code>make(1)</code>）。後者は特に、同じ名前のライブラリ関数が存在する場合にそれと区別する目的もあります（<code>printf(1)</code>, <code>printf(3)</code>）。</p>
 
-<p>黒線で囲われているテキストは必ずしもコマンドライン上の操作を表すとは限らない。たとえば</p>
+<p>黒線で囲われているテキストは必ずしもコマンドライン上の操作を表すとは限りません。たとえば</p>
 
 <pre><code>#include <stdio.h>
 int
@@ -35,13 +35,13 @@ main(void)
         return 0;
 }</code></pre>
 
-<p>1行目は"#"から始まっているがコマンドライン上の操作ではなくC言語の典型的なHello Worldである。これはテキストファイルの中身を表している。黒線の中身の意味は文脈に応じて判断してほしい。</p>
+<p>1行目は"#"から始まっているがコマンドライン上の操作ではなくC言語の典型的なHello Worldです。これはテキストファイルの中身を表しています。黒線の中身の意味は文脈に応じて判断してください。</p>
 
 <h2>オンラインマニュアル</h2>
 
-<p>マニュアルページはオンラインマニュアル（on-line manual pages）とも呼ばれ、BSD Unixであればベースシステムに標準でインストールされている。GNU/Linuxディストリビューションは別途パッケージをインストールする必要があるかもしれない。</p>
+<p>マニュアルページはオンラインマニュアル（on-line manual pages）とも呼ばれ、BSD Unixであればベースシステムに標準でインストールされています。GNU/Linuxディストリビューションは別途パッケージをインストールする必要があるかもしれません。</p>
 
-<p>このマニュアルではコマンドの説明とコマンドライン引数の一覧、コマンドに関連しているファイル、他に参照すべきマニュアルページの一覧、既知のバグなどを調べられる。あるコマンドの使い方が分からないとき、もっとも詳しく正確な情報は<code>man(1)</code>から得られるだろう。</p>
+<p>このマニュアルではコマンドの説明とコマンドライン引数の一覧、コマンドに関連しているファイル、他に参照すべきマニュアルページの一覧、既知のバグなどを調べられます。あるコマンドの使い方が分からないとき、もっとも詳しく正確な情報は<code>man(1)</code>から得られるでしょう。</p>
 
 <p>マニュアルページは</p>
 
@@ -51,9 +51,9 @@ main(void)
 
 <pre><code>$ man 3 printf</code></pre>
 
-<p>と実行する。ページャには通常<code>more(1)</code>か<code>less(1)</code>が使われるが、環境変数PAGERを設定して任意のページャを指定することもできる。</p>
+<p>と実行することで閲覧できます。ページャ（pager）には通常<code>more(1)</code>か<code>less(1)</code>が使われますが、環境変数PAGERを設定して任意のページャを指定することもできます。</p>
 
-<p>近年ではマニュアルページを書かず<code>-h</code>や<code>--help</code>あるいは<code>usage</code>の出力だけで済ませようとするソフトウェアも存在する（おそらく<code>groff(1)</code>で書くのが面倒なのだろう）。単にコマンドライン引数について調べたいときなどはこれを使ったほうが手っ取り早い。</p>
+<p>近年ではマニュアルページを書かず<code>-h</code>や<code>--help</code>あるいは<code>usage</code>の出力だけで済ませようとするソフトウェアも存在します（おそらく<code>groff(1)</code>で書くのが面倒なのでしょう）。単にコマンドライン引数について調べたいときなどはこれを使ったほうが手っ取り早い場合もあります。</p>
 
 <hr>
 <footer>
