--- a/introduction/clamav.html
+++ b/introduction/clamav.html
@@ -4,10 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width,initial-scale=1.0">
 <style>
-@media print, screen and (min-width:640px){
-code{line-height:1.4;}
-.inner{margin: auto auto; line-height:1.75; letter-spacing:0.05em;width:38em;text-align: justify; text-justify: inter-ideograph; color: #333333;}
-pre{padding-top:1em; padding-left:2em; padding-right:2em; padding-bottom:1em; line-height:0; border:solid 1px; border-radius:1em; white-space:pre-wrap;}p{text-indent:1em;}}
+@media print, screen and (min-width:640px){ code{line-height:1.4;} .inner{margin: auto auto; line-height:1.75; letter-spacing:0.05em;width:38em;text-align: justify; text-justify: inter-ideograph; color: #333333;} pre{padding-top:1em; padding-left:2em; padding-right:2em; padding-bottom:1em; line-height:0; border:solid 1px; border-radius:1em; white-space:pre-wrap;}p{text-indent:1em;}}
 @media only screen and (max-width:640px){.inner{font-size:80%; margin:auto auto; line-height:1.75; letter-spacing:0.05em; width:25em; text-align:justify; text-justify: inter-ideograph; color: #333333;} pre{padding-top:1em; padding-left:2em; padding-right:2em; padding-bottom:1em; line-height:0; border:solid 1px; border-radius:1em; white-space:pre-wrap;} code{font-size:70%; line-height:1.4;}}p{text-indent:1em;}
 </style>
 <title>e-yuuki.org</title>
@@ -15,7 +12,7 @@ pre{padding-top:1em; padding-left:2em; padding-right:2em; padding-bottom:1em; li
 <body><div class="inner">
 <h1>アンチウイルス&mdash;&mdash;ClamAV&reg;</h1>
 <hr>
-<p>ClamAV&reg;はオープンソースのアンチウイルスエンジン。WindowsやmacOS・GNU/Linux・BSD Unixで動作する。</p>
+<p>ClamAV&reg;はFLOSSのアンチウイルスエンジンです。WindowsやmacOS・GNU/Linux・BSD Unixで動作します。</p>
 
 <h2>目次</h2>
 <ol>
@@ -25,12 +22,12 @@ pre{padding-top:1em; padding-left:2em; padding-right:2em; padding-bottom:1em; li
 </ol>
 
 <h2 id="install">インストール</h2>
-<p>pkgsrc(7)ではsecurity/clamavパッケージで提供されている。</p>
+<p><code>pkgsrc(7)</code>ではsecurity/clamavパッケージで提供されています。</p>
 
 <pre><code># cd /usr/pkgsrc/security/clamav
 # make install clean clean-depends</code></pre>
 
-<p>ウイルスデータベースを更新するfreshclamdと、アンチウイルスデーモンclamd(8)の自動起動を設定し、それぞれをservice(8)経由で実行する。</p>
+<p>ウイルスデータベースを更新するfreshclamdと、アンチウイルスデーモン<code>clamd(8)</code>の自動起動を設定し、それぞれをservice(8)経由で実行します。</p>
 
 <pre><code># cp /usr/pkg/share/examples/rc.d/freshclamd /etc/rc.d
 # cp /usr/pkg/share/examples/rc.d/clamd /etc/rc.d</code></pre>
@@ -43,10 +40,9 @@ pre{padding-top:1em; padding-left:2em; padding-right:2em; padding-bottom:1em; li
 # service clamd start</code></pre>
 
 <h2 id="config">設定ファイル&mdash;&mdash;/usr/pkg/etc/clamd.conf</h2>
-<p>clamd(8)の設定ファイルはclamd.conf(5)。以下にデフォルトとの差分を示す。</p>
+<p><code>clamd(8)</code>の設定ファイルは<code>clamd.conf(5)</code>です。以下にデフォルトとの差分を示します。</p>
 
-<pre><code>
---- /usr/pkg/share/examples/clamav/clamd.conf	2018-09-16 17:34:32.000000000 +0900
+<pre><code>--- /usr/pkg/share/examples/clamav/clamd.conf	2018-09-16 17:34:32.000000000 +0900
 +++ /usr/pkg/etc/clamd.conf	2018-09-18 18:20:49.323386782 +0900
 @@ -11,7 +11,7 @@
  # LogFile must be writable for the user running daemon.
@@ -99,9 +95,7 @@ pre{padding-top:1em; padding-left:2em; padding-right:2em; padding-bottom:1em; li
  # The daemon can work in local mode, network mode or both. 
  # Due to security reasons we recommend the local mode.</code></pre>
 
-<p>/usr/pkg/etc/clamd.conf内にコメントで設定項目の説明が書かれているのでそこまで難しくはない。</p>
-
-<p>設定ファイルを変更したならservice(8)からclamd(8)を再起動し設定をデーモンに反映させる。</p>
+<p>/usr/pkg/etc/clamd.conf内にコメントで設定項目の説明が書かれていますから、そこまで難しくはないでしょう。設定ファイルを変更したなら、<code>service(8)</code>から<code>clamd(8)</code>を再起動し、設定をデーモンに反映させてください。</p>
 
 <pre><code># service clamd restart</code></pre>
 
