--- a/introduction/i3.html
+++ b/introduction/i3.html
@@ -4,10 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width,initial-scale=1.0">
 <style>
-@media print, screen and (min-width:640px){
-code{line-height:1.4;font-size:80%;}
-.inner{margin: auto auto; line-height:1.75; letter-spacing:0.05em;width:38em;text-align: justify; text-justify: inter-ideograph; color: #333333;}
-pre{padding-top:1em; padding-left:2em; padding-right:2em; padding-bottom:1em; line-height:0; border:solid 1px; border-radius:1em; white-space:pre-wrap;}p{text-indent:1em;}}
+@media print, screen and (min-width:640px){ code{line-height:1.4;font-size:80%;} .inner{margin: auto auto; line-height:1.75; letter-spacing:0.05em;width:38em;text-align: justify; text-justify: inter-ideograph; color: #333333;} pre{padding-top:1em; padding-left:2em; padding-right:2em; padding-bottom:1em; line-height:0; border:solid 1px; border-radius:1em; white-space:pre-wrap;}p{text-indent:1em;}}
 @media only screen and (max-width:640px){.inner{font-size:80%; margin:auto auto; line-height:1.75; letter-spacing:0.05em; width:25em; text-align:justify; text-justify: inter-ideograph; color: #333333;} pre{padding-top:1em; padding-left:2em; padding-right:2em; padding-bottom:1em; line-height:0; border:solid 1px; border-radius:1em; white-space:pre-wrap;} code{font-size:70%; line-height:1.4;}}p{text-indent:1em;}
 </style>
 <title>e-yuuki.org</title>
@@ -15,13 +12,13 @@ pre{padding-top:1em; padding-left:2em; padding-right:2em; padding-bottom:1em; li
 <body><div class="inner">
 <h1>ウィンドウマネージャ&mdash;&mdash;i3</h1>
 <hr>
-<p>ウィンドウマネージャは大きく分けてコンポジット型・スタック型・タイル型の3つに分類できる。<code>i3(1)</code>はタイル型に分類されるウィンドウマネージャである。</p>
+<p>ウィンドウマネージャは大きく分けてコンポジット型・スタック型・タイル型の3つに分類できます。<code>i3(1)</code>はタイル型に分類されるウィンドウマネージャです。</p>
 
-<p><code>i3(1)</code>の便利なところは、基本的にウィンドウが重ならないように配置されるので画面を効率よく使える点と、ウィンドウのフォーカスの切り替えをキーボードだけで完結できる点にある。一方でキーボード操作は覚えることが多いので、WindowsやmacOSのようなGUIの操作がしたいのであればこのページを読み飛ばし、代わりにjwmやfluxboxなどを使うといいだろう。また<code>pkgsrc(7)</code>ではウィンドウマネージャはpkgsrc/wmディレクトリに集まっているので、どれが一番好みか探すこともできる。</p>
+<p><code>i3(1)</code>の便利なところは、基本的にウィンドウが重ならないように配置されるので画面を効率よく使える点と、ウィンドウのフォーカスの切り替えをキーボードだけで完結できる点です。一方でキーボード操作は覚えることが多いので、WindowsやmacOSのようなGUIの操作がしたいのであればこのページを読み飛ばし、代わりにjwmやfluxboxなどを使うといいでしょう。また<code>pkgsrc(7)</code>ではウィンドウマネージャはpkgsrc/wmディレクトリに集まっていますから、どれが一番好みか探すこともできます。</p>
 
 <h2>インストール</h2>
 
-<code>i3(1)</code>本体と、ターミナルを経由せずソフトウェアを実行するための<code>dmenu(1)</code>をインストールする。
+<code>i3(1)</code>本体と、ターミナルを経由せずソフトウェアを実行するための<code>dmenu(1)</code>をインストールします。
 
 <pre><code># cd /usr/pkgsrc/wm/i3
 # make install clean clean-depends</code></pre>
@@ -34,13 +31,13 @@ pre{padding-top:1em; padding-left:2em; padding-right:2em; padding-bottom:1em; li
 
 <h2>$HOME/.xinitrc</h2>
 
-$HOME/.xinitrcの最終行に以下を追記する。
+$HOME/.xinitrcの最終行に以下を追記します。
 
 <pre><code>i3</code></pre>
 
 <h2>設定ファイル $HOME/.config/i3/config</h2>
 
-$HOME/.config/i3/configの設定例は以下の通り。
+$HOME/.config/i3/configの設定例は以下の通りです。
 
 <pre><code># i3 config file (v4)
 #
@@ -167,7 +164,7 @@ bar {
 
 <h2>操作方法</h2>
 
-<p>よく使う機能とそのキー操作は以下の通り。"$mod"はホットキーを意味する。当然、設定ファイルの内容に操作が影響されるため上述の設定ファイルに沿ったものとなっている。</p>
+<p>よく使う機能とそのキー操作は以下の通りです。"$mod"はホットキーを意味します。当然、設定ファイルの内容に操作が影響されるため上述の設定ファイルに沿ったものとなっています。</p>
 
 <table border="1"><thead>
 <tr><th>機能</th><th>操作</th></tr>
