--- a/introduction/tmux.html
+++ b/introduction/tmux.html
@@ -20,6 +20,44 @@
 <p>要するにひとつの端末から複数の端末を扱うことができるようになるソフトウェアです。tmuxが起動したとき新しい<b>セッション</b>（session）が作成されます。セッションは<b>疑似端末</b>（pseudo terminals）の集まりで、<b>ペイン</b>（pane）単位で四角く区切られています。ひとつのセッションで複数のペインを作れば、ひとつの端末から任意の数の端末を操作できるようになるわけです。</p>
 
 <p>tmuxはペインを作るたびに端末の画面を分割していくため、端末を全画面で利用していれば<a href="./i3.html">i3wm</a>と同様にディスプレイを有効に活用できます。しかしtmuxを使う最も大きな利点は、セッションそのものが削除（destroy）されない限りセッション内の疑似端末上で動くソフトウェアが中断されないことにあります。よく「サーバ構築時にtmux上で作業していれば、ネットワークの問題で接続が途切れても安心」と言われるのはこれが所以です。</p>
+
+<h2>インストール</h2>
+<p><code>pkgsrc(7)</code>ではmisc/tmuxとして提供されていますが、NetBSD 8.0ではベースシステムに取り込まれているので特にインストール作業は必要ありません。</p>
+
+<h2>設定ファイル $HOME/.tmux.conf</h2>
+<p>本稿では以下の設定ファイル$HOME/.tmux.confを例にします。</p>
+
+<pre><code>set -g prefix C-t $ prefix is ctrl-t
+set -g bell-action none # Ignore all bell.
+set -g mode-keys vi # vi keybinding when copy or select mode.
+set -sg escape-time 20 # Magic.
+set -g default-terminal screen-256color
+set -g terminal-overrides 'xterm:colors=256'
+
+# xclip
+bind-key -T copy-mode-vi v send-keys -X begin-selection
+bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "xclip -selection clipboard -i"
+bind-key -T copy-mode-vi enter send-keys -X copy-pipe-and-cancel "xclip -selection clipboard -i"
+
+unbind C-b # Unbind ^b because that conflict to shell cursor action.
+
+bind h select-pane -L
+bind j select-pane -D
+bind k select-pane -U
+bind l select-pane -R
+bind -r H resize-pane -L 5
+bind -r J resize-pane -D 5
+bind -r K resize-pane -U 5
+bind -r L resize-pane -R 5
+
+set-option -g status-bg colour208
+set-option -g status-fg colour0
+
+set-option -g default-shell /usr/pkg/bin/zsh
+set-option -g default-command /usr/pkg/bin/zsh
+
+# Show pane's number while 5 seconds
+set -g display-panes-time 5000</code></pre>
 <hr>
 <footer>
 <div style="text-align:center;padding-top:2em;padding-bottom:2em;"><a rel="license" href="https://creativecommons.org/publicdomain/zero/1.0/"><img src="https://i.creativecommons.org/p/zero/1.0/88x31.png" alt="CC0" /></a></div>
