--- a/introduction/install.html
+++ b/introduction/install.html
@@ -128,12 +128,12 @@ dhcpcd_flags="wm0"</code></pre>
 <h3>無線接続（動的IPアドレス）</h3>
 <p>無線を使うには次の手順に従います。</p>
 
-<li>
-  <ol>SSIDとパスフレーズ（パスワード）の確認</ol>
-  <ol><code>wpa_passphrase(8)</code>の実行</ol>
-  <ol><code>wpa_supplicant(8)</code>の実行</ol>
-  <ol><code>dhcpcd(8)</code>の実行</ol>
-</li>
+<ol>
+  <li>SSIDとパスフレーズ（パスワード）の確認</li>
+  <li><code>wpa_passphrase(8)</code>の実行</li>
+  <li><code>wpa_supplicant(8)</code>の実行</li>
+  <li><code>dhcpcd(8)</code>の実行</li>
+</ol>
 
 <p>まず無線接続に必要なSSIDとパスフレーズを控えます。ここではSSIDを<i>home-ssid</i>、パスフレーズを<i>password</i>、ネットワークインタフェースはiwm0とします。</p>
 
