--- a/introduction/tmux.html
+++ b/introduction/tmux.html
@@ -58,6 +58,25 @@ set-option -g default-command /usr/pkg/bin/zsh
 
 # Show pane's number while 5 seconds
 set -g display-panes-time 5000</code></pre>
+
+<h2>操作方法</h2>
+<p>tmuxの操作は「プレフィックス＋キー」が基本です。上記の設定ファイルではプレフィックスをCtrl-tにしていますから、tmuxの操作はCtrl-tプラスなにかのキー入力ということになります。本稿では「$prefix-x」という形式で表します。</p>
+
+<table>
+<thead><tr><th>キー操作</th><th>動作</th></tr></thead>
+<tbody>
+<tr><th>$prefix-"</th><th>ペインを横に分割する。</th></tr>
+<tr><th>$prefix-%</th><th>ペインを縦に分割する。</th></tr>
+<tr><th>$prefix-h</th><th>左のペインに移動する。</th></tr>
+<tr><th>$prefix-j</th><th>下のペインに移動する。</th></tr>
+<tr><th>$prefix-k</th><th>上のペインに移動する。</th></tr>
+<tr><th>$prefix-l</th><th>右のペインに移動する。</th></tr>
+<tr><th>$prefix-H</th><th>右隣のペインが左に向かって大きくなる。</th></tr>
+<tr><th>$prefix-J</th><th>上のペインが下に向かって大きくなる。</th></tr>
+<tr><th>$prefix-K</th><th>現在のペインが上に向かって大きくなる。</th></tr>
+<tr><th>$prefix-L</th><th>現在のペインが右に向かって大きくなる。</th></tr>
+<tr><th>$prefix-x</th><th>現在のペインを終了する（この入力のあとにyで終了。nで取り消し）</th></tr>
+</tbody></table>
 <hr>
 <footer>
 <div style="text-align:center;padding-top:2em;padding-bottom:2em;"><a rel="license" href="https://creativecommons.org/publicdomain/zero/1.0/"><img src="https://i.creativecommons.org/p/zero/1.0/88x31.png" alt="CC0" /></a></div>
