--- a/introduction/index.html
+++ b/introduction/index.html
@@ -39,7 +39,7 @@ pre{padding-top:1em; padding-left:2em; padding-right:2em; padding-bottom:1em; li
         <li><a href="./i3.html">ウィンドウマネージャ&mdash;&mdash;i3</a></li>
         <li><a href="./urxvt.html">仮想端末&mdash;&mdash;rxvt-unicode</a></li>
         <li><a href="./tmux.html">端末多重化&mdash;&mdash;tmux</a></li>
-        <li>インプットメソッド&mdash;&mdash;ibus-mozc</li>
+        <li><a href="./ibus-mozc.html">インプットメソッド&mdash;&mdash;ibus-mozc</a></li>
         <li>日本語フォント&mdash;&mdash;Ricty</li>
         </ol>
       </li>
