--- a/introduction/index.html
+++ b/introduction/index.html
@@ -19,7 +19,6 @@ pre{padding-top:1em; padding-left:2em; padding-right:2em; padding-bottom:1em; li
 
 <p>本書は<a href="https://github.com/user340/www/tree/master/introduction">https://github.com/user340/www</a>リポジトリの一部で管理されています。どのファイルがいつどのように変更されたかを正確に見るにはGitのlogを参照してください。HTMLはWorld Wide Web Consortium（W3C）による<a href="https://www.w3.org/TR/2017/REC-html52-20171214/">HTML 5.2</a>に従って書かれ、そのmarkupは<a href="https://validator.w3.org/">The W3C Markup Validation Service</a>にて確認しています。</p>
 
-
 <h2>目次</h2>
 <ol>
   <li><a href="./intro.html">はじめに</a></li>
@@ -40,7 +39,7 @@ pre{padding-top:1em; padding-left:2em; padding-right:2em; padding-bottom:1em; li
         <li><a href="./urxvt.html">仮想端末&mdash;&mdash;rxvt-unicode</a></li>
         <li><a href="./tmux.html">端末多重化&mdash;&mdash;tmux</a></li>
         <li><a href="./ibus-mozc.html">インプットメソッド&mdash;&mdash;ibus-mozc</a></li>
-        <li>日本語フォント&mdash;&mdash;Ricty</li>
+        <li><a href="./ricty.html">日本語フォント&mdash;&mdash;Ricty</a></li>
         </ol>
       </li>
       <li>アプリケーション
